# book-recommender-system

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
analysis/: research.ipynb
config/: config.yaml
recommender/components/: data_ingestion.py  data_transformation.py  data_validation.py  ingest_data.py  model_training.py
recommender/config/: configuration.py
recommender/entity/: config_entity.py
recommender/exception/: exception_handler.py
recommender/logger/: log.py
recommender/pipelines/: training_pipeline.py
recommender/utils/: load_yaml.py
